src/objects/LicenseProduct_Metadata__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Product Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Enable_Logic__c</fullName>
        <label>Custom Enable Logic?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_In_Total__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in Total Agent Count?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Beta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Beta?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order for the agent types in UI and other flows</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PORTAL_API_NAME__c</fullName>
        <label>Portal API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_API_NAME__c</fullName>
        <label>SF API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>License Product Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Included_In_Total__c</columns>
        <columns>PORTAL_API_NAME__c</columns>
        <columns>Category__c</columns>
        <columns>SF_API_NAME__c</columns>
        <columns>Order__c</columns>
        <columns>Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Product Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>